# django-nocturne

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: ai-backends.rst  api.rst  conf.py  configuration.rst  index.rst  installation.rst  requirements.txt  screenshots.rst
example_project/: manage.py
example_project/core/: apps.py  views.py
example_project/core/management/commands/: generate_demo_logs.py
example_project/example_project/: settings.py  urls.py
nocturne/: __init__.py  admin.py  ai_diagnosis.py  apps.py  detection.py  middleware.py  models.py  permissions.py  serializers.py  urls.py  views.py
nocturne/management/commands/: create_nocturne_user.py  nocturne_config.py  snapshot_health.py  test_ai_diagnosis.py
nocturne/migrations/: 0001_initial.py  0002_alter_logentry_options.py  0003_logentry_ai_analysis.py  0004_logentry_ai_analysed_at_logentry_exception_message_and_more.py  0005_healthsnapshot_webhookevent.py  0006_alter_logentry_options_and_more.py
nocturne/static/nocturne/: dashboard.js
nocturne/templates/nocturne/: 403.html  admin_dashboard.html  dashboard.html
tests/: test_api.py  test_detection.py  test_middleware.py  test_models.py
