[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-nocturne"
version = "0.1.2"
description = "Intelligent observability for Django. Detect anomalies, diagnose with AI, alert via webhooks — plug in, migrate, done."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
  {name = "Rishav", email = "rishav00a@gmail.com"}
]
keywords = [
  "django", "observability", "apm", "monitoring",
  "anomaly-detection", "logging", "webhook", "ai"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.1",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: System :: Monitoring",
  "Topic :: System :: Logging",
]
dependencies = [
  "django>=4.0",
  "djangorestframework>=3.14",
  "numpy>=1.24",
  "requests>=2.28",
  "langchain-core>=0.2",
]

[project.optional-dependencies]
ollama     = ["langchain-ollama>=0.1"]
anthropic  = ["langchain-anthropic>=0.1"]
openai     = ["langchain-openai>=0.1"]
gemini     = ["langchain-google-genai>=0.1"]
all = [
  "langchain-ollama>=0.1",
  "langchain-anthropic>=0.1",
  "langchain-openai>=0.1",
  "langchain-google-genai>=0.1",
]
dev = [
  "pytest>=7.0",
  "pytest-django>=4.5",
  "pytest-cov>=4.0",
  "factory-boy>=3.2",
  "coverage>=7.0",
]

[project.urls]
Homepage       = "https://github.com/rishav00a/django-nocturne"
Documentation  = "https://django-nocturne.readthedocs.io"
Repository     = "https://github.com/rishav00a/django-nocturne"
"Bug Tracker"  = "https://github.com/rishav00a/django-nocturne/issues"
Changelog      = "https://github.com/rishav00a/django-nocturne/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where   = ["."]
include = ["nocturne*"]

[tool.setuptools.package-data]
nocturne = [
  "templates/**/*",
  "static/**/*",
  "migrations/*.py",
  "management/commands/*.py",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "example_project.settings"
python_files           = ["test_*.py"]
pythonpath             = ["example_project"]

[tool.coverage.run]
source = ["nocturne"]
omit   = ["*/migrations/*", "*/tests/*"]
